--- a/_talks/2020spc.md
+++ b/_talks/2020spc.md
@@ -2,10 +2,10 @@
 title: "Euler-Milstein and relevant approaches for high-precision stochastic simulation of quantum trajectories"
 collection: talks
 type: "Talk"
-permalink: /talks/2012-03-01-talk-1
+permalink: /talks/2020spc
 venue: "The Siam Physics Congress"
 date: 2020-06-04
 location: "Bangkok, Thailand"
 ---
 
-This is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!
+The slides can be reached here!
