Update and rename 2014-02-01-talk-2.md to 2020fqst.md

--- a/_talks/2020fqst.md
+++ b/_talks/2020fqst.md
@@ -1,9 +1,10 @@
 ---
 title: "Euler-Milstein Numerical Scheme for High-precision Stochastic Process Simulation of Quantum Trajectories"
 collection: talks
-type: "poster presentation"
-permalink: /talks/2014-02-01-talk-2
+type: "Talk"
+permalink: /talks/2020fqst
 venue: "International Workshop for Young Researchers on the Future of Quantum Science and Technology (FQST)"
 date: 2020-02
 location: "NII, Tokyo, Japan"
 ---
+The poster can be reached here!
