--- a/_talks/2020fqst.md
+++ b/_talks/2020fqst.md
@@ -4,7 +4,7 @@ collection: talks
 type: "Talk"
 permalink: /talks/2020fqst
 venue: "International Workshop for Young Researchers on the Future of Quantum Science and Technology (FQST)"
-date: 2020-02
+date: 2020-02-02
 location: "NII, Tokyo, Japan"
 ---
 The poster can be reached here!
