Update and rename 2009-10-01-paper-title-number-1.md to 2020spc.md

--- a/_publications/2020spc.md
+++ b/_publications/2020spc.md
@@ -1,7 +1,7 @@
 ---
 title: "Euler-Milstein and relevant approaches for high-precision stochastic simulation of quantum trajectories"
 collection: publications
-permalink: /publication/Euler-Milstein and relevant approaches for high-precision stochastic simulation of quantum trajectories
+permalink: /publication/2020spc
 excerpt: 'This paper is about the number 1. The number 2 is left for future work.'
 date: 2009-10-01
 venue: 'Journal 1'
