--- a/_talks/2020spc.md
+++ b/_talks/2020spc.md
@@ -8,4 +8,4 @@ date: 2020-06-04
 location: "Bangkok, Thailand"
 ---
 
-The slides can be reached here!
+The slides can be reached [here!](files/SPC-Presentation-Nattaphong.pdf)
