--- a/_talks/2020fqst.md
+++ b/_talks/2020fqst.md
@@ -7,4 +7,4 @@ venue: "International Workshop for Young Researchers on the Future of Quantum Sc
 date: 2020-02-02
 location: "NII, Tokyo, Japan"
 ---
-The poster can be reached [here!](main/files/FQST_2020_Poster.pdf)
+The poster can be reached [here!](https://github.com/natwonglakhon/main/blob/28ea1a5593587bcdae74aef2327a2dfe8c8c8c4a/files/FQST_2020_Poster.pdf)
