--- a/_publications/2020spc.md
+++ b/_publications/2020spc.md
@@ -4,8 +4,8 @@ collection: publications
 permalink: /publication/2020spc
 excerpt: 'Quantum trajectory simulations using different maps and our proposed approach'
 date: 2021-02-01
-venue: 'Journal 1'
+venue: 'Journal of Physics: Conference Series'
 paperurl: 'https://iopscience.iop.org/article/10.1088/1742-6596/1719/1/012099'
 citation: 'Nattaphong Wonglakhon et al 2021 J. Phys.: Conf. Ser. 1719 012099'
 ---
-This is my proceeding paper. It consists my undergrad partial work (simulation results), while the entire results (both analytic and simulation) will be published soon.
+This is my proceeding paper. It partially consists my undergrad work (simulation results), while the entire results (both analytic and simulation) will be published soon.
