--- a/_posts/2021film.md
+++ b/_posts/2021film.md
@@ -11,7 +11,7 @@ During the challenging time of Covid-19 outbreak in Bangkok, I decided to do som
 
 Trip from MBK to Sanam Luang, May 27, 2021.
 ======
-<img src="images/coffee.png" alt="hi" class="inline"/>
+<img src="images/000049190005.jpg" alt="hi" class="inline"/>
 My trip was set off at Pathumwan square.
 
 
