Update and rename 2021film.md to 2021-film.md

--- a/_posts/2021-film.md
+++ b/_posts/2021-film.md
@@ -1,7 +1,7 @@
 ---
 title: 'Film Photography'
 date: 2021-08-11
-permalink: /posts/2021film/
+permalink: /posts/2021-film
 tags:
   - Film Photography
   - Bangkok
