--- a/_talks/2020fqst.md
+++ b/_talks/2020fqst.md
@@ -1,7 +1,7 @@
 ---
 title: "Euler-Milstein Numerical Scheme for High-precision Stochastic Process Simulation of Quantum Trajectories"
 collection: talks
-type: "Talk"
+type: "Poster presentation"
 permalink: /talks/2020fqst
 venue: "International Workshop for Young Researchers on the Future of Quantum Science and Technology (FQST)"
 date: 2020-02-02
