--- a/_talks/2020fqst.md
+++ b/_talks/2020fqst.md
@@ -8,3 +8,5 @@ date: 2020-02-02
 location: "NII, Tokyo, Japan"
 ---
 The poster can be reached [here!](https://github.com/natwonglakhon/main/blob/28ea1a5593587bcdae74aef2327a2dfe8c8c8c4a/files/FQST_2020_Poster.pdf)
+
+![IMG_5748](https://user-images.githubusercontent.com/88487585/128993471-a712bc3e-0620-493f-bf10-1c11d516e5b9.jpeg)
