--- a/_talks/2020spc.md
+++ b/_talks/2020spc.md
@@ -1,7 +1,7 @@
 ---
 title: "Euler-Milstein and relevant approaches for high-precision stochastic simulation of quantum trajectories"
 collection: talks
-type: "Talk"
+type: "Oral presentation"
 permalink: /talks/2020spc
 venue: "The Siam Physics Congress"
 date: 2020-06-04
