--- a/_posts/2025-07-13-Asia2025.md
+++ b/_posts/2025-07-13-Asia2025.md
@@ -22,7 +22,7 @@ TL;DR
 Intro
 ======
 Towards the end of my PhD, the thesis writing period was getting very intense and stressful. Complaining became my breakfast, and, eventually, I set a goal to do a big trip with Jack to celebrate the thesis submission. It did not take long to plan as we had just recently been to Europe two years ago. 
-Thus, it must be somewhere else. The easiest option for both of us was east Asia. Becuase, I didn't need a visa and my Jack hadn’t really been there. We came up with a number of countries, including Thailand, Cambodia, Laos, Vietnam, Singapore, Taiwan, Hong Kong, and Japan. 
+Thus, it must be somewhere else. The easiest option for both of us was east Asia. Becuase, I didn't need a visa and Jack hadn’t really been there. We came up with a number of countries, including Thailand, Cambodia, Laos, Vietnam, Singapore, Taiwan, Hong Kong, and Japan. 
 Unfortunately, some countries had to be dropped for a feasible time frame. After a long research, we ended up doing four countries: Thailand, Singapore, Taiwan and Japan. Well, I reckon I don’t have to explain why Thailand was there lol. We chose to visit Singapore for two reasons. 
 First, I’d never been there, and second, it’s been always Jack’s favourite place on earth. In contrast, I have always been interested in Taiwan, both culturally and politically (although Taiwan has only had free elections for the past 30 years, it has now become one of the most democratic countries in Asia!! How cool is that!?) Finally, JAPAN. Jack had never been (he actually said he’d rather visit Africa!), and I had only ever been to Tokyo. So this felt like a good time to visit other parts of Japan.
 
