--- a/_posts/2025-07-13-Asia2025.md
+++ b/_posts/2025-07-13-Asia2025.md
@@ -148,7 +148,7 @@ Japan
 
 Osaka-Kyoto-Nara
 ------
-Now flying to KIX. My first impression was the airport! I did not know that the Kansai airport was built on the [reclaimed land](https://simpleflying.com/osaka-kansai-airport/)! If you check the Google map, it will make sense to you. We arrived quite late at night and was very confused by the train system there. Fortunately, most of the restaurants open until 5am. (It was crazy. Australians could never comprehend this LOL.) We were so hungry and randomly walked in a restaurant, which turned out to be the best meal on the trip!! 
+Now flying to KIX. My first impression was the airport! I did not know that the Kansai airport was built on the [reclaimed land](https://simpleflying.com/osaka-kansai-airport/)! If you check the Google map, it will make sense to you. We arrived quite late at night and was very confused by the train system there. Fortunately, most of the restaurants open until 5am. (It was crazy. Australian mind could never comprehend this LOL.) We were so hungry and randomly walked in a restaurant, which turned out to be the best meal on the trip!! 
 We stayed in Osaka for five nights. We went around the city: to [Osaka castle](https://en.wikipedia.org/wiki/Osaka_Castle), museums and the street food market. I love the fact that they have a whole world underground (like literally). 
 
 ![Osaka castle](https://github.com/natwonglakhon/main/blob/master/images/Asia2025_photos/Osk1.jpeg?raw=true)
